# TabConverter

./: .gitignore  README.md  grand-railboard.json  pyproject.toml  tabconverter.py
tunings/bass/1string/: a.json  b.json  d.json  e.json
tunings/bass/4string/: standard.json
tunings/bass/5string/: standard.json
tunings/guitar/6string/: all4thsC.json  all4thsE.json  dadgad.json  dropC.json  dropD.json  halfstepDown.json  nashville.json  opdnD.json  openC.json  openD.json  openE.json  openG.json  standard.json  stepDown.json
tunings/guitar/7string/: standard.json
tunings/guitar/8string/: standard.json
tunings/stick/10string/: baritoneMelody.json  classic.json  deepBaritoneMelody.json  deepMatchedReciprocal.json  dualBassReciprocal.json  fullBaritone.json  matchedReciprocal.json  raisedMatchedReciprocal.json
tunings/stick/12string/: classic.json  classicHighBass4th.json  deepBaritoneMelody.json  matchedReciprocal.json  matchedReciprocalHighBass4th.json
tunings/stick/8string/: classic.json
