[project]
name = "tab-converter"
version = "0.1.0"
description = "Convert guitar tabs between tunings and merge multiple tab files"
authors = [{name = "nulvox"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
tab-converter = "tabconverter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tabconverter.py"]